css/main.css
/* ... */
[dir=rtl] .form-check .form-check-input {
    margin-right: -1.5em;
}

[dir=rtl] .top-features-slider {
    direction: rtl;
}

[dir=rtl] .left-right-gradient::before {
    background: linear-gradient(-90deg, #fff, transparent);
}

[dir=rtl] .left-right-gradient::after {
    background: linear-gradient(-90deg, transparent, #ffffff);
}

[dir=rtl] .tw--translate-x-full {
    transform: translateX(100%);
}

[dir=rtl] .image-animation:after {
    transform: translate(50%, -50%) rotate(-45deg);
}

[dir=rtl] .ph-bold.ph-caret-right:before {
    content: "\e138";
}

[dir=rtl] .ph-bold.ph-arrow-up-right:before {
    content: "\e090";
}

[dir=rtl] .ph.ph-caret-right:before {
    content: "\e138";
}

[dir=rtl] .ph.ph-caret-left:before {
    content: "\e13a";
}

[dir=rtl] .ph.ph-arrow-right:before {
    content: "\e058";
}

[dir=rtl] .ph-bold.ph-caret-left:before {
    content: "\e13a";
}

[dir=rtl] .ph-bold.ph-caret-left:before {
    content: "\e13a";
}

/* ================================== rtl css End ================================== */
.progress-container,
.progress {
    background-color: #dce0ee;
    border-radius: 5px;
    position: relative;
    height: 7px;
    width: 100%;
}

.progress {
    width: 0;
    height: 7px;
    top: 50%;
    left: 0;
    transition: 0.8s linear;
    transform: translateY(-50%);
    background-color: var(--neutral-800);
}

.progress.active {
    width: 0 !important;
}

.percentage {
    background-color: var(--neutral-800);
    border-radius: 5px;
    box-shadow: 0 4px 5px #00000033;
    color: #fff;
    font-size: 12px;
    padding: 4px;
    position: absolute;
    bottom: 20px;
    inset-inline-start: 0;
    -webkit-transform: translateX(-50%);
    transform: translateX(-50%);
    width: 40px;
    text-align: center;
    -webkit-transition: 0.8s linear;
    transition: 0.8s linear;
}

.percentage::after {
    background-color: var(--neutral-800);
    content: "";
    position: absolute;
    bottom: -5px;
    left: 50%;
    -webkit-transform: translateX(-50%) rotate(45deg);
    transform: translateX(-50%) rotate(45deg);
    height: 10px;
    width: 10px;
    z-index: -1;
}

.progress.active,
.percentage.active {
    inset-inline-start: 0 !important;
}

.banner-area {
    padding: 270px 0 290px;
}

@media screen and (max-width: 767px) {
    .banner-area {
        padding: 200px 0 160px;
    }
}

.banner-area::before {
    content: "";
    position: absolute;
    width: 100%;
    height: 100%;
    inset-block-start: 0;
    inset-inline-start: 0;
    background: linear-gradient(180deg, #000 0%, rgba(0, 0, 0, 0.63) 51.06%, rgba(0, 0, 0, 0.58) 100%);
}

@media screen and (max-width: 575px) {
    .banner-subtitle {
        font-size: 18px;
        margin-block-end: var(--size-5);
    }

    .amenity-hover-title {

        padding: 311px 0 35px !important;
    }
}

.banner-title {
    letter-spacing: -0.01em;
    line-height: 96%;
}

@media screen and (max-width: 1399px) {
    .banner-title {
        font-size: 95px;
        line-height: 98%;
    }
}

@media screen and (max-width: 1199px) {
    .banner-title {
        font-size: 80px;
        line-height: 102%;
    }
}

@media screen and (max-width: 767px) {
    .banner-title {
        font-size: 65px;
    }
}

@media screen and (max-width: 575px) {
    .banner-title {
        font-size: 50px;
    }
}

@media screen and (max-width: 1199px) {
    .banner-play-button {
        justify-content: left !important;
        margin-block-start: 60px;
    }
}

.play-now-two {
    width: 110px;
    height: 110px;
    line-height: 1;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    background: hsl(var(--white));
    color: hsl(var(--black));
    border-radius: 50%;
    font-size: 26px;
    position: relative;
    z-index: 1;
}

.play-now-two::before {
    position: absolute;
    content: "";
    left: 50%;
    top: 50%;
    width: 70%;
    height: 70%;
    background-color: rgba(255, 255, 255, 0.1);
    animation: borderanimate2 2s linear infinite;
    z-index: -1;
    border-radius: 50%;
    transform: translate(-50%, -50%);
    z-index: -1;
}

.play-now-two::after {
    position: absolute;
    content: "";
    left: 50%;
    top: 50%;
    width: 90%;
    height: 90%;
    transform: scale(1.5);
    border: 1px solid rgba(255, 255, 255, 0.2);
    animation: borderanimate2 2s linear infinite;
    border-radius: 50%;
    transform: translate(-50%, -50%);
    z-index: -1;
}

@keyframes borderanimate2 {
    0% {
        transform: translate(-50%, -50%) scale(0.8);
    }

    60% {
        opacity: 1;
    }

    100% {
        transform: translate(-50%, -50%) scale(2.5);
        opacity: 0;
    }
}

.checkout-area {
    margin-top: -80px;
}

.checkout-bg {
    box-shadow: 0 4px 72px 17px rgba(0, 0, 0, 0.05);
}

@media screen and (max-width: 1399px) {
    .checkout-bg {
        padding-inline-start: 30px;
        padding-inline-end: 10px;
    }
}

.checkout-main-wrapper {
    display: flex;
    align-items: center;
    justify-content: space-between;
}

@media screen and (max-width: 1199px) {
    .checkout-main-wrapper {
        flex-wrap: wrap;
        row-gap: 20px;
    }
}

@media screen and (max-width: 575px) {
    .checkout-main-wrapper {
        flex-wrap: wrap;
        row-gap: 30px;
        justify-content: center;
    }
}

.checkout-wrapper {
    max-width: 312px;
    width: 100%;
    border-right:0.8px solid rgb(235 235 235 / 46%);
    padding-inline-end: 30px;
    padding-inline-start: 13px;
}

@media screen and (max-width: 767px) {
    .checkout-wrapper {
        max-width: 230px;
    }
}

.checkout-wrapper:first-child {
    max-width: 250px;
    padding-inline-start: 0;
    padding-inline-end: 10px;
}

.checkout-wrapper:nth-child(2) {
    max-width: 240px;
}

@media screen and (max-width: 991px) {
    .checkout-wrapper:nth-child(2) {
        border: none;
        padding-left: 0;
    }
}

.checkout-wrapper:nth-child(3) {
    max-width: 240px;
}
/* ... */

